<resources>
    <string name="app_name">citizz</string>
    <string name="research_bar">research</string>

    <!-- Report Page-->
    <string name="add_cityzz_page_title">citizz</string>
    <string-array name="item_cityzz_type">
        <item>Object/Animal lost</item>
        <item>Accident</item>
        <item>Paid work</item>
        <item>Events</item>

    </string-array>

    <string name="add_cityzz_description">@string/item_cityzz_description</string>


    <!--Announce items-->

    <string name="item_cityzz_title">Title of the report</string>
    <string name="item_cityzz_description">Add a description</string>
    <string name="item_cityzz_region">Region</string>
    <string name="item_cityzz_department">Department</string>
    <string name="item_cityzz_city">City</string>
    <string name="item_cityzz_address">Address</string>
</resources>